--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Flask==2.3.2
-recipe-scrapers==15.7.1
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml==4.9.3
+Flask
+recipe-scrapers
+requests
+beautifulsoup4
+lxml
